fix desktop nav bar alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,24 @@ nav button{
 header ul{
     background-color:#fafafa;
     text-align: center;
-    padding-right: 20px;
     width: 180px;
 }
 
 .navbar-nav{
-        margin-left: auto !important;
+        margin-left: auto;
+        border: 1px solid black;
+}
+
+/* Formatting the nav bar for mobile broke desktop. Fixing it here. */
+@media screen and (min-width:992px){
+    header ul{
+        width:350px;
+    }
+    .navbar-nav{
+        margin-left: 0;
+        margin-right: auto !important;
+        border: none;
+    }
 }
 
 /*------------------------------------------------------------HERO IMAGE SECTION--*/
